--- a/springProject/src/main/resources/application.properties
+++ b/springProject/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Project3
+spring.datasource.username=project_host
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+server.port=3333
