review controller, mapper, mybatis-mapper 생성, html적용, main.html->index.html 수정

--- a/springProject/src/main/resources/application.properties
+++ b/springProject/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=project_host
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+mybatis.mapper-locations=mybatis_mapper/*Mapper.xml
+mybatis.type-aliases-package=com.group3.springProject.dto
+
 server.port=3333
