updateUser.html추가 + R의 환경

--- a/springProject/src/main/resources/application.properties
+++ b/springProject/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/SPRING_BOARD
+spring.datasource.username=board_user
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=mybatis_mapper/*.xml
+mybatis.type-aliases-package=com.group3.springProject.dto
 
